--- a/maxym-backend/pom.xml
+++ b/maxym-backend/pom.xml
@@ -239,28 +239,28 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>${rest-assured.version}</version>
+            <!-- <version>${rest-assured.version}</version> -->
             <scope>test</scope>
         </dependency>
         
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>${testcontainers.version}</version>
+           <!-- <version>${testcontainers.version}</version> -->
             <scope>test</scope>
         </dependency>
         
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
-            <version>${testcontainers.version}</version>
+          <!--   <version>${testcontainers.version}</version> -->
             <scope>test</scope>
         </dependency>
         
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${testcontainers.version}</version>
+         <!--   <version>${testcontainers.version}</version>  -->
             <scope>test</scope>
         </dependency>
 
